update: Asteroids - NeoWs services added
